[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "donpwner"
version = "1.1.0"
description = "Advanced DonPAPI Analysis & Attack Tool - Leveraging DonPAPI with Smart Delay & Jitter"
readme = "README.md"
license = {text = "Non-Commercial"}
authors = [
    {name = "Mor David", email = "work@mordavid.co.il"}
]
maintainers = [
    {name = "Mor David", email = "work@mordavid.co.il"}
]
keywords = [
    "security", 
    "penetration-testing", 
    "active-directory", 
    "donpapi", 
    "password-spray", 
    "credentials", 
    "redteam",
    "cybersecurity"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration"
]
requires-python = ">=3.8"
dependencies = [
    "prettytable>=3.0.0",
    "requests>=2.28.0",
    "PyYAML>=6.0"
]

[project.urls]
Homepage = "https://github.com/MorDavid/DonPwner"
Repository = "https://github.com/MorDavid/DonPwner"
Documentation = "https://github.com/MorDavid/DonPwner#readme"
"Bug Tracker" = "https://github.com/MorDavid/DonPwner/issues"
"Author Website" = "https://www.mordavid.com"

[project.scripts]
donpwner = "donpwner:main"

[tool.setuptools]
py-modules = ["donpwner"]

[tool.setuptools.packages.find]
where = ["."]
include = ["donpwner*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0"
]